updates website text

--- a/WebTextFall18.org
+++ b/WebTextFall18.org
@@ -1,5 +1,43 @@
 * Web Text 
 
+[Begin 7:00 PM Sept 18]
+
+** Design text with JB on Skype
+The importance of Design in Virtual Reality 
+
+*** Jb has written Design text to be edited 
+The shopping center as
+that intelligent living organism
+
+The mall could become a commercial cell developer, creating a living organism. In the analogy with the living organism we retain the fact that it is evolutionary, that each cell can die or be divided or even depend directly on other cells and even interact with each other in the way they interact with each other. the living world. the organism at the origin of the commercial center would be the brain, the sectors of activity of the organs, and the consumers of the cells. All of them forming a living being where everyone is vital.
+ Some cells could move within the center, some could be ephemeral (pop-up retail space), some would be fixed and would form the backbone of the shopping center. A framework that would act directly on the other "members" of the center themselves composed of cells with different activities (without creating a segregation of activities within the member)
+We would thus see the birth of a small town, a small living being that can evolve morphologically and functionally over time.
+Thus we would place the commercial actors (of different scales) as active customers of the commercial center itself. That is to say, a large group could rent a trading cell that it would place in the center at its convenience as well as temporarily. (even the premise of commercial space or ephemeral marketing) It could even decide to make a partnership with another actor of the center to promote a product together. (Example a ready-to-wear store makes a partnership with Samsung to be able to view on either the entire collection with a virtual reality headset)
+
+Consumer Advantage:
+
+- Its commercial center does not have the same morphology during the year, that is to say that the aspect of the commercial center respond directly to the market environment, and to the seasons (like any other organization alive) So we do not get tired anymore.
+- It would be in position (thanks to the technology and the applications) to promote itself by a vote the cells that it wishes to be born within its commercial center (the cells being of different nature, relaxation, sale, various activity .
+- Its close link with the activity of the shopping center makes it more important with regard to tradesmen (a cell behaving badly with the clientele is likely to die) analogy with the cancer cell of an organism which is killed rightly by other cells.
+- By this, all consumers (individually comparable to the smallest cells in the set) become by their numbers a type of cells very important and powerful.
+
+Commercial actor advantage:
+
+- Commercial players would have the freedom to partner with other brands to promote their products more effectively.
+
+- The possibility of temporarily extending their activities allows them visibility no longer at a single place in the commercial center but at their goodwill in several places. (The customer who does not pass their flagship can pass their beautiful cells and then head for himself to the flagship.
+
+- Small players or local entrepreneurs could also be customers of the shopping center by renting cells at attractive prices, thus reducing the risk of failure. (If the contractor fails the cell is tidy and available) and expanding the business areas within the center.
+
+Advantage agency shopping center:
+
+- Low investment because the center and evolutive and all the cells is not necessarily created from the beginning (therefore lower risks)
+- He can also manage internally to act on the cells and the frame, (by the same analogy he would be the brain of the commercial center)
+The shopping center would become a kind of flagship mall that will attract flagship (large group) and smaller activities (catering, crafts, culture)
+- It has through the vote of consumers on the cells they want to appear in the center, a direct return on the health of its center.
+
+...
+
 [Begin: 4:13 PM Sept 18]
 [End: 4:35 PM Sept 18]
 
