--- a/WebTextFall18.org
+++ b/WebTextFall18.org
@@ -1,6 +1,7 @@
 * Web Text 
 
 [Begin 7:00 PM Sept 18]
+[End: 7:30 PM Sept 18]
 
 ** Design text with JB on Skype
 The importance of Design in Virtual Reality 
