--- a/WebTextFall18.org
+++ b/WebTextFall18.org
@@ -1,5 +1,16 @@
 * Web Text 
 
+** Audience 
+The audience of people who use VR can be divided into four broad categories 
+
+1) Innovator (bracey) 
+
+2) Student (design) 
+
+3) Tech enthusiast family 
+
+4) Gamer (steve) 
+
 [Begin 7:00 PM Sept 18]
 [End: 7:30 PM Sept 18]
 
