design web text

--- a/WebTextFall18.org
+++ b/WebTextFall18.org
@@ -32,6 +32,25 @@ Then you start designing the concept according the user story. there are many di
 2) what is design in vr
 3) what is the process
 
+*** Nike 
+1) Realized the logo was a great structure for a vr architecture 
+2) we created the models and imagined their use 
+3) 
+
+**
+
+Designing for vr is something different. the inifinite gallery for example with the glass above the ceiling of the gallery. in vr this is no necessary. but for immersive purposes, we needed the user to trust something so we must add these parameters. sunglight, rainfall, shadows. You need to be aware of all the possibilities and balance them out to create the right experience. the right experience answers the user story and the concept that was chosen before. you need to konw where to go and where to stop. You tell a story with your design. as an architecture can be a stroy, you tell the story through the shape and you lead the story with your architecture and designs. the architecture of the experience leads you from one platform to the next. Not only does this guide you through the expierence, you also feel the essence of the brand through the design. these sections through which you walk are purchased. this is the inventory or real estate purchase in vr. to tell a story with architecture you must focus on the concept, sensitivity, the shapes, light, texture possibilities. the important thing to understand is that it is limitless. you don't need to again be inside an architecture resembling brick/mortar or the real world. 
+
+[lets pickup here with the parameters in jb's design strat]
+
+you have to take all of these parameters into consideration to enhance your desig. 
+
+1) what is in the design - landscape 
+
+2) you inside the experience 
+
+3) what it causes the user to imagine
+
 ** Audience 
 The audience of people who use VR can be divided into four broad categories. 
 
