--- a/WebTextFall18.org
+++ b/WebTextFall18.org
@@ -23,8 +23,11 @@ This is the first phase of VR design, the foundation of the project. Here we con
 In VR we can build innovative digital worlds with their own physical laws, or we can build simple 3D enhancements of the brand's existing strategies. This is the balance we must strike in VR design.
 
 *** Designing Physics
-The finest VR programs are built in collaboration between 3D designers and 3D developers. The possibilities of VR allow the design team to think in limitless terms, yet they must consider the more complex their designs the more resources needed during integration with the development team. 
+The finest VR programs are built in collaboration between 3D designers and 3D developers. The possibilities of VR allow the design team to think in limitless terms, yet they must consider the more complex their designs the more resources needed during integration with the development team.  
 
+We will use the retail industry as an case study. Consider the general design of current brick and mortar retail space is bound by the laws of gravity. Objects must be supported by shelves and hangers. For similar terrestrial reasons, inventory is often retailed inside a piece of physical architecture restricted to a single plot of land. As we expand retail into this digitally immersive space, VR environments are not restricted by terrestrial elements. Inside Virtual architecture, object and human movement will behave and react however we decide. We can arrange gravitation laws and all of the corresponding terrestrial elements however we choose. 
+
+ 
 Designing a Virtual World is telling a story through an experience of shapes, colors, lighting, and movement. Throughout the experience the user will move through a progression of digitally designed spaces. Each of these can serve as their own marketable assets. Consider these spaces akin to the rooms of a home. The price of building the home will increase based on the increase in demand for resources.  
 
 *** New Design Components 
