--- a/WebTextFall18.org
+++ b/WebTextFall18.org
@@ -23,14 +23,14 @@ This is the first phase of VR design, the foundation of the project. Here we con
 In VR we can build innovative digital worlds with their own physical laws, or we can build simple 3D enhancements of the brand's existing strategies. This is the balance we must strike in VR design.
 
 *** Designing Physics
-The finest VR programs are built in collaboration between 3D designers and 3D developers. The possibilities of VR allow the design team to think in limitless terms, yet they must consider the more complex their designs the more resources needed during integration with the development team.  
+The finest VR programs are built in collaboration between 3D designers and 3D developers. The possibilities of VR allow the design team to think in limitless terms.  
 
-We will use the retail industry as an case study. Consider the general design of current brick and mortar retail space is bound by the laws of gravity. Objects must be supported by shelves and hangers. For similar terrestrial reasons, inventory is often retailed inside a piece of physical architecture restricted to a single plot of land. As we expand retail into this digitally immersive space, VR environments are not restricted by terrestrial elements. Inside Virtual architecture, object and human movement will behave and react however we decide. We can arrange gravitation laws and all of the corresponding terrestrial elements however we choose. 
+Let's use the retail industry as a case study. Consider the general design of current brick and mortar retail space is bound by the laws of gravity. Objects must be supported by shelves and hangers. For similar terrestrial reasons, inventory is often retailed inside a piece of physical architecture restricted to a single plot of land. Inside Virtual architecture, object and human movement will behave and react however we decide. We can arrange gravitation laws and all of the corresponding terrestrial elements like sunglight, wind, and rainfall however we choose. The design possibilities are limitless. 
 
- 
-Designing a Virtual World is telling a story through an experience of shapes, colors, lighting, and movement. Throughout the experience the user will move through a progression of digitally designed spaces. Each of these can serve as their own marketable assets. Consider these spaces akin to the rooms of a home. The price of building the home will increase based on the increase in demand for resources.  
+With this in mind, designers must consider the complexity of their designs with respect to the developmental resources needed to put them in motion and bring them to life. The new gravitational laws, polygon count used, and fluidity of user motion within the environment will all drive the scope of work when integrating these designs with the backend code that brings them to life.   
 
 *** New Design Components 
+Designing a Virtual World means telling a story through an experience of shapes, colors, lighting, and movement. Throughout the VR experience the user will move through a progression of digitally-created spaces. Each of these can serve as marketable assets. Consider these spaces akin to the rooms of a home. As the size of the home - and thus the resources required to build it - increases so does the cost of construction. 
 
 *** Our Process
 
