design web text

--- a/WebTextFall18.org
+++ b/WebTextFall18.org
@@ -4,7 +4,7 @@
 
 
 [start 6:40 - 7:20]
-[start 7:40 - 
+[start 7:40 - 9:20PM]
 
 *** Intro 
 The Virtual World is introducing a new brand of design. For the first time we are integrating the principles of real-world architecture with the limitlessness of digital software. As we build customized Virtual Worlds spanning across industries, we're are realizing the limitlessness of this platform. We're also coming up against challenges never-before-encountered. We start small and end big, begin with a viable concept that can scale. 
