--- a/Oct '18 Web Launch.org
+++ b/Oct '18 Web Launch.org
@@ -18,79 +18,79 @@ Through consistent experimentation, research, and a desire to solve real problem
 
 By setting up 360 cameras in 10 of the most iconic locations, we’re live streaming from around the world for 36 consecutive hours. Travel from down under, to Dubai, through the old world, and all the way to North America, experiencing the sights and sounds of New Year's Eve in the most thrilling locations. Anyone with an internet connection can participate. 
 
-# Display Your Brand 
+## Display Your Brand 
 
 Users can travel with friends, meet new people along the way, or go it alone. Beyond the raw sights and sounds from the 360 video stream, anything about the experience can be sponsored. We could build a customized style of transportation or incorporate brand visibility with retail products placed throughout the XR experience. 
 
-# User Experience 
+## User Experience 
 
 Begin in your branded lobby, the Virtual globe at center. Click it, move it, rotate it, and select among marked locations. Travel stylishly and arrive among the people. Listen to the sounds; explore the town. Stay a while or return to the lobby to explore another celebration.
 
-# Broadcast 
+## Broadcast 
 
 Destinations working to attract visitors may display their culture, infrastructure, and appearance - shedding light in a brand new way. Virtual Teleportation shows the glamour of your destination. Make global use of VR’s live potential.
 
 ***** XR Architecture 
 /Sketch, Measure, and Build/
 
-# Abstract 
+## Abstract 
 Before infrastructure reaches the physical world it is crafted on a 2D screen - an inexact tool. VR is an intermediate space between digital and physical. The architect steps inside his 3D structure to refine its precision.
 
-# Increase Certainty 
+## Increase Certainty 
 
 In Virtual Space, architects inspect the relationship between the geometrical dynamics of a structure and it's environment. Traffic flow, pedestrian movement, sunlight, and rainfall are among the variables to be evaluated from inside an environment replica. 
 
-# Expand Potential 
+## Expand Potential 
 
 !!! Today, more architects are gaining access to computer aided design (CAD) and computer aided manufacturing (CAM). These programs introduce a new language of forms and shapes too complex for the human brain to project and visualize. Virtual Reality is the technology enabling the mind to comprehend this imagery.
 
-# The Buyer
+## The Buyer
 
 Receives multiple architectural proposals for major construction projects. When receiving a submission in Virtual Reality, the investor, often local government, makes a more informed decision from inside the Virtual Model.       
 
-# Financial Efficiency
+## Financial Efficiency
  
 Architecture is a spatial discipline that's at home in the Virtual World. Inviting architects into VR increases the precision of their calculations and the sensitivity of their design. It's a tool for maximizing efficiency of major construction projects before they break ground in our towns and cities.
 
 ***** Infinite Gallery 
 /Virtual Product Display/
 
-# Abstract 
+## Abstract 
 As content creators transition to VR they’re met with the challenge of presentation. The Infinite Gallery, our original VR interface, is built to display content linearly. It’s step one in creating customized Virtual architecture.
 
-# Welcome Inside
+## Welcome Inside
 
 The experience begins in a space custom-designed for content display. A finger against the VR touchpad initiates movement. Remove your finger to stop moving. Continue like this to navigate the entire architectural structure. Just as in the real world, users can move their head to access 360-degree viewing.
 
-# What to Display
+## What to Display
 Capable of hosting an unlimited content library, The Infinite Gallery is prepared for original display ideas. Hang products on the wall, show content behind glass window panes, create doorways to varying dimensions, or build the second floor of your company’s customized structure.
 
-# In Business
+## In Business
 This interface is immediately applicable for basic 3D marketing. Regardless of file type, any visual content ports to The Infinite Gallery. Photographers displaying in 3D, galleries scaling beyond a physical location, and 3D artists creating VR-ready content from scratch are among early adopters.
 
-# Provide Access
+## Provide Access
 At the beginning of the 20th century, F.W. Woolworth altered retail marketing. Before the advent of his “Five and Dime” drugstores, the customer requested a product, the clerk retrieved it, and the transaction took place. Woolworth was the first to display drugstore products on publicly accessible shelves, initiating a physical and emotional connection between goods and customers. 100 years later it remains a global display standard in retail.
 
-# Show Your Story
+## Show Your Story
 The Infinite Gallery is a linear display interface in 3D. Upon reaching the end of your story, the user has connected with your brand.
 
 ***** Torus
 /Virtual World Mobility/
 
-# Abstract
+## Abstract
 The early days of Virtual Reality revealed a flaw in user experience. Like a computer without a mouse, Virtual Reality without the Torus is difficult to navigate. Inspired by VR’s fully immersive nature, we developed the Torus to reflect real world energy flow.
 
-# Making Nature Virtual
+## Making Nature Virtual
 
 Energy flows in the same manner at all universal scales. Known scientifically as toroidal flow, it’s the energetic movement that powers our planet. Similar to the way light colors our vision, toroidal energy drives our perception of movement.
 
 !!! To maximize Virtual Reality’s function as a tool for enhancing real world experience, we’ve integrated this energetic flow into immersive technology, enabling intuitive mobility.
 
-# Applying the Torus
+## Applying the Torus
 
 Once the Torus surrounds the user, information emerges in two locations. By glancing above eye level, content appears similarly to a computer screen’s top bar. Glance down to access the bottom bar. Both information sources slide, change, and refresh in reaction to eye movement, controller commands, or interaction with a virtual wristband. Customize the Torus however you choose. Once information is selected, the featured content appears at a comfortable viewing angle within the user’s vantage point.
 
-# Maximizing the Torus
+## Maximizing the Torus
 
 Considering the omnipresence of toroidal flow in the physical world, it’s a challenge to narrow down the Torus’ applications in Virtual Reality. The most effective VR content promotes mobility and interactivity, and the Torus is designed to facilitate these functions in all cases.
 
@@ -99,20 +99,20 @@ The Torus is the foundational tool we’ll use to build your customized VR conte
 ***** XR Color 
 /Live In Color/
 
-# Abstract
+## Abstract
 Currently, designers and developers create immersive worlds by working off a 2D screen. There lies a natural incoherence between tool and product. XR Color immerses human consciousness in a 3D color object and grants interaction with any color on the spectrum.
 
-# Choosing color
+## Choosing color
 
 Users can move three-dimensionally. Vertical movement alters lightness (polar north representing pure white and south pure black). Rotation around the polar axis adjusts hue. Altering horizontal depth changes saturation. Complementary colors are available at the reciprocal distance and angle from center. Any of the interactive options (optical focus, controller click, or a virtual wristband) may initiate interaction.
 
 !!! As more designers and developers interact with color in 3D, richer and more color-coordinated content will result. Eventually, we’ll experience a Virtual world resembling the color and texture of the physical world.
 
-# Understanding Color:
+## Understanding Color:
 
 Although color is a foundational component of human sight, how and why our eyes perceive it is often misunderstood. Integrating this Virtual object with academic programs adds a tangible element to the relationship between student and study. Making XR Color available to the general public through VR app stores democratizes this form of immersive education and enhances our understanding of the human sense of sight.
 
-# Pleasure & Wellness
+## Pleasure & Wellness
 
 For close to a millennium, humans have practiced various forms of chromotherapy. In some cases, colors are portrayed onto varying body parts to increase blood flow and cleanse anatomical systems. Other methods of chromotherapy work by exposing the eye to specific colors for specific time intervals. XR Color is a new form of accessing chromotherapy.
 
@@ -121,7 +121,7 @@ The health benefits of XR Color span widely, elevating the computer programmer a
 ***** Bloomaway 
 /Seamless Virtual Transport/
 
-# Abstract 
+## Abstract 
 When users first enter Virtual Reality they often need instructions on how to navigate their new digital surrounds, so we created Bloomaway. It’s seamless virtual navigation powered by user intuition.
 
 ## Seamless 
